feat: create documentation API for announcement and news
