# app/Http/Resources/NewsResource.php
@@ -5,6 +5,27 @@ namespace App\Http\Resources;
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
 
+/**
+ * @OA\Schema(
+ *     schema="NewsResource",
+ *     type="object",
+ *     title="News Resource",
+ *     properties={
+ *         @OA\Property(property="id_pemberitahuan", type="integer"),
+ *         @OA\Property(property="nama", type="string"),
+ *         @OA\Property(property="thumbnail", type="string"),
+ *         @OA\Property(property="text", type="string"),
+ *         @OA\Property(property="level", type="string"),
+ *         @OA\Property(property="location", type="string"),
+ *         @OA\Property(property="category", type="object",
+ *             @OA\Property(property="id", type="integer"),
+ *             @OA\Property(property="nama", type="string")
+ *         ),
+ *         @OA\Property(property="viewer", type="integer"),
+ *         @OA\Property(property="created_at", type="string", format="date-time"),
+ *     }
+ * )
+ */
 class NewsResource extends JsonResource
 {
     /**
